--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.5",
     "react-toastify": "^9.0.8",
+    "reconnecting-websocket": "^4.4.0",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
